# resume

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  person_schema.json  resume.html  resume.md  resume.yml  template.html  template.md
src/: lib.rs  main.rs
